--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Zooniverse React Transcriber</title>
-    <meta name="description" content="zoo react boilerplate">
+    <meta name="description" content="A viewer for Zooniverse Transcription projects">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
