New home page, some style updates, etc

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Zooniverse React Transcriber</title>
-<meta name="description" content="A generic React-based Transcription project powered by the Zooniverse.">
+<title>Zooniverse Transcription Viewer</title>
+<meta name="description" content="A tool for reviewing data from Zooniverse transcription projects.">
 </head>
 <body>
-<h1>Zooniverse React Transcriber</h1>
-<p>A generic React-based Transcription project powered by the Zooniverse.</p>
+<h1>Zooniverse Transcription Viewer</h1>
+<p>A tool for reviewing data from Zooniverse transcription projects.</p>
 <p>View the <a href="app">app</a> directory to see the project in action.</p>
 <script>
 window.onload = function init() {
